--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><p style="color:red;"></p>Felipe Cooper</p></h1>
+						<h1><p>Felipe Cooper</p></h1>
 						<p>Computer Science Student</p>
 						<nav>
 							<ul>
