--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
 -->
 <html>
 	<head>
+			<link rel="apple-touch-icon" sizes="57x57" href="assets/css/favicon/apple-icon-57x57.png">
+			<link rel="apple-touch-icon" sizes="60x60" href="assets/css/favicon/apple-icon-60x60.png">
+			<link rel="apple-touch-icon" sizes="72x72" href="assets/css/favicon/apple-icon-72x72.png">
+			<link rel="apple-touch-icon" sizes="76x76" href="assets/css/favicon/apple-icon-76x76.png">
+			<link rel="apple-touch-icon" sizes="114x114" href="assets/css/favicon/apple-icon-114x114.png">
+			<link rel="apple-touch-icon" sizes="120x120" href="assets/css/favicon/apple-icon-120x120.png">
+			<link rel="apple-touch-icon" sizes="144x144" href="assets/css/favicon/apple-icon-144x144.png">
+			<link rel="apple-touch-icon" sizes="152x152" href="assets/css/favicon/apple-icon-152x152.png">
+			<link rel="apple-touch-icon" sizes="180x180" href="assets/css/favicon/apple-icon-180x180.png">
+			<link rel="icon" type="image/png" sizes="192x192"  href="assets/css/favicon/android-icon-192x192.png">
+			<link rel="icon" type="image/png" sizes="32x32" href="assets/css/favicon/favicon-32x32.png">
+			<link rel="icon" type="image/png" sizes="96x96" href="assets/css/favicon/favicon-96x96.png">
+			<link rel="icon" type="image/png" sizes="16x16" href="assets/css/favicon/favicon-16x16.png">
+			<link rel="manifest" href="assets/css/favicon/manifest.json">
+			<meta name="msapplication-TileColor" content="#ffffff">
+			<meta name="msapplication-TileImage" content="assets/css/favicon/ms-icon-144x144.png">
+			<meta name="theme-color" content="#ffffff">
+
+
 		<title>Felipe Cooper</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -27,7 +46,7 @@
 								<li><a href="https://www.linkedin.com/in/marcos-felipe-cardoso-cooper-797400171" class="icon fa-linkedin" target="_blank"><span class="label">Linkedin</span></a></li>
 								<li><a href="https://www.facebook.com/Felipe15" target="_blank"class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="https://github.com/FelipeCooper" target="_blank" class="icon fa-github"><span class="label">Github</span></a></li>
-								<li><a href="mailto:contato@felipecooper.pro" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+								<li><a href="mailto:contact@felipecooper.pro" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
 					</header>
